syntax = "proto3";
package auth.v1;
// 这里的coolcar是go.mod中的module
option go_package = "coolcar/auth/api/gen/v1;authpb";

message LoginRequest {
    string code = 1;
}

message LoginResponse {
    string access_token = 1;
    int32 expires_in = 2;
}

service authService{
    rpc Login (LoginRequest) returns (LoginResponse);
}